--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@ h3 {
 }
 h4 { 
 	color: #484535;
-	border-right: .2em solid #26241B;
+	
 	 
 	width: 32ch;
 	margin: 2em 1em;
@@ -1117,6 +1117,10 @@ a4 { font-weight:bold;
 		<img src="happy.png">
 	</div>
 
+	<audio id="beep">
+		<source src="beep.mp3" type="audio/mpeg">
+	</audio>
+
 	<div id="oo">
 		<img src="okk.png">
 	</div>
@@ -1263,6 +1267,8 @@ window.onmousemove = function(){
 			}
 
 
+	soun11.onclick = function(){
+		beep.play();}	
 /* 스마트폰 */
 	smart.onclick = function(){
 		if (on) {touch.play();
@@ -1308,7 +1314,7 @@ window.onmousemove = function(){
 			soun9.style.display = "none";
 			soun10.style.display = "none";
 			soun11.style.display = "none";
-			self.setTimeout("lookDiv4()",800);
+			self.setTimeout("lookDiv4()",700);
 		on = true;}
 
 			}
@@ -1348,7 +1354,7 @@ window.onmousemove = function(){
 			soun11.style.display = "none";
 			music.style.display = "inline";
 			musi.style.display = "inline";
-			self.setTimeout("lookDiv4()",800);
+			self.setTimeout("lookDiv4()",700);
 		on = true;
 			}
 	soun6.onclick = function(){
@@ -1540,7 +1546,7 @@ window.onmousemove = function(){
 			soun9.style.display = "none";
 			soun10.style.display = "none";
 			soun11.style.display = "none";
-			self.setTimeout("lookDiv4()",2000);
+			self.setTimeout("lookDiv4()",700);
 			bx.style.display = "inline";
 			flashlight.style.display = "inline";
 			foo.style.display = "inline";
