--- a/index.html
+++ b/index.html
@@ -989,10 +989,11 @@ a4 { font-weight:bold;
 	</div>
 
 <!--방향 -->
+<a href="https://seoojing.github.io/oi/">
 	<div id="rig">
 		<img src="orhere.png">
 	</div>
-
+</a>
 
 <!--설명글 -->
 
